--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -24,7 +24,6 @@ apply plugin: 'java'
 apply plugin: 'java-library'
 apply plugin: 'jacoco'
 apply plugin: 'idea'
-apply plugin: 'org.junit.platform.gradle.plugin'
 
 description="The jtsgen annotation processor"
 
@@ -42,7 +41,7 @@ dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiter_Version}")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiter_Version}")
     testCompileOnly('org.apiguardian:apiguardian-api:1.0.0')
-    testRuntime("org.junit.platform:junit-platform-launcher:${junitPlatform_Version}")
+//    testRuntime("org.junit.platform:junit-platform-launcher:${junitPlatform_Version}")
     testRuntime("org.apache.logging.log4j:log4j-core:${log4j_Version}")
     testRuntime("org.apache.logging.log4j:log4j-jul:${log4j_Version}")
 
@@ -57,10 +56,13 @@ dependencies {
 //    apt 'org.immutables:value-processor:2.5.3'
     compileOnly "org.immutables:value:${immutables_Version}" // for annotations
     compileOnly "org.immutables:builder:${immutables_Version}" // for annotations
-    
-    compileOnly  files(Jvm.current().toolsJar)
 
-    runtime files(Jvm.current().toolsJar)
+
+    if (! Jvm.current().javaVersion == "1.8") {
+        println("Adding Tools.jar to dependency")
+        compileOnly  files(Jvm.current().toolsJar)
+        runtime files(Jvm.current().toolsJar)
+    }
 }
 
 
@@ -92,26 +94,14 @@ compileJava {
 
 jacoco {
     toolVersion = "${jacoco_Version}"
-    applyTo junitPlatformTest
+//    applyTo junitPlatformTest
 }
 
-junitPlatform {
-    // platformVersion '1.0.3'
-    filters {
-        engines {
-            include 'junit-jupiter'
-        }
-        tags {
-            exclude 'slow'
-        }
-        // includeClassNamePattern '.*Test'
-    }
-    details 'summary'
-    // configurationParameter 'junit.jupiter.conditions.deactivate', '*'
-    // enableStandardTestTask true
-    // reportsDir file('build/test-results/junit-platform') // this is the default
-    logManager 'org.apache.logging.log4j.jul.LogManager'
+test {
+    useJUnitPlatform()
+    systemProperty 'java.util.logging.manager', 'org.apache.logging.log4j.jul.LogManager'
 }
+
 
 clean {
     delete aptOutDir
