#54 [ci] update to openjdk11, [doc] added contributor list

--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -92,6 +92,11 @@ compileJava {
     }
 }
 
+javadoc {
+    // exclude generated code
+    exclude 'dz/jtsgen/processor/model/**'
+}
+
 jacoco {
     toolVersion = "${jacoco_Version}"
 //    applyTo junitPlatformTest
