[chore] Migrated to Gradle 6.7

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # IDEA and gradle
 /.gradle/
+/buildSrc/.gradle/
 .idea/
 .run/
 build/
@@ -23,6 +24,7 @@ hs_err_pid*
 # during development
 /processor/src/test/java/jts
 /tmp
+*.gradle.old
 
 /processor/src/main/generated/
 /processor/src/test/java/tmp/
