--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ hs_err_pid*
 /processor/src/main/generated/
 /processor/src/test/java/tmp/
 /processor/src/test/generated/
+/samples/src/main/generated/
