[doc] update release notes and switching back to snapshot
Signed-off-by: Dragan Zuvic <git.zuvic@posteo.de>

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,6 @@ coverallsVersion=2.8.3
 immutablesVersion=2.7.4
 apiGuardianVersion=1.0.0
 
-mavenRepoUrl=httpsX://oss.sonatype.org/service/local/staging/deploy/maven2/
+mavenRepoUrl=https://oss.sonatype.org/service/local/staging/deploy/maven2/
 mavenSnapshotRepoUrl=https://oss.sonatype.org/content/repositories/snapshots/
 #mavenSnapshotRepoUrl=build/repo
